gitops/espresso/infrastructure/configs/unifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: gateway
spec:
  ports:
    - port: 8444
      targetPort: 8444
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi
  namespace: gateway
subsets:
  - addresses:
      - ip: 10.0.187.1
    ports:
      - port: 8444
