gitops/espresso/infrastructure/configs/unifi/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi
  namespace: gateway
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - unifi.gullhaugveien.michaelbrusegard.com
  rules:
    - backendRefs:
        - name: unifi
          port: 8444
